--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@next/font": "13.1.5",
     "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-separator": "^1.0.1",
     "@radix-ui/react-tabs": "^1.0.2",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
